# MOMP-core

./: LICENSE  README.md  setup.cfg  setup.py
Demos/: MOMP-DFT-benchmark.py
src/MOMP/: __init__.py  mp.py  proj.py  stop.py
