[metadata]
name = MOMP-core
version = 0.1
author = Joan Palacios
author_email = jopabel93@gmail.com
description = Multi-dimensional orthogonal matching pursuit algorithms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WiSeCom-Lab/MOMP-core
project_urls =
    Bug Tracker = https://github.com/WiSeCom-Lab/MOMP-core/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
